--- a/worksheet.tex
+++ b/worksheet.tex
@@ -1,6 +1,6 @@
 \documentclass{dcbl/challenge}
 
-\setdoctitle{Der Titel meines Dokuments}
+\setdoctitle{Working with getopt}
 \setdocauthor{Stephan Bökelmann}
 \setdocemail{sboekelmann@ep1.rub.de}
 \setdocinstitute{AG Physik der Hadronen und Kerne}
@@ -8,20 +8,30 @@
 
 \begin{document}
 
-Jedes Challenge-Blatt beginnt mit einer kurzen Einleitung, die einen Kontext für den jeweiligen Zettel setzt. 
-
-\section*{Aufgaben}
+\section*{Exercise}
 \begin{aufgabe}
-    Löse die Gleichung $x^2 - 5x + 6 = 0$.
+    Write a program, that prints the number of arguments.
 \end{aufgabe}
 
-\begin{aufgabe}[Für Fortgeschrittene]
-    Beweise den Satz des Pythagoras.
+\begin{aufgabe}
+    Write a program, that takes multiple arguments, and prints them.
 \end{aufgabe}
 
-\section*{Anmerkungen}
+\begin{aufgabe}
+    Write a program, that takes a flag.
+    If the flag is set, print the number of arguments.
+\end{aufgabe}
+
+\begin{aufgabe}
+    Write a program, that takes an option with an integer value.
+    The program should also take multiple parameters. 
+    The number given by the option, determines which parameter is printed.
+    If the number is greater than the number of parameters, print all parameters.
+\end{aufgabe}
+
+\section*{Annotations}
 \begin{enumerate}
-    \item Link zu einem YouTube-Video: \url{https://www.youtube.com}
+    \item Example-Repo: \url{https://github.com/bjoekeldude/uebergabe_an_main}
 \end{enumerate}
 
 \end{document}
